@startuml

package gameLaby{

package laby{

class Labyrinthe{
+ <static final> MUR: char
+ <static final> PJ: char
+ <static final> VIDE: char
+ <static final> MONSTRE : char
+ <static final> FANTOME : char
+ <static final> SERPENT : char
+ <static final> TROLL : char
+ <static final> ESCALIER_DESC : char
+ <static final> ESCALIER_MONT : char
+ <static final> VIE_PERSO : int
+ <static final> VIE_MONSTRE : int
+ <static final> VIE_FANTOME : int
+ <static final> VIE_TROLL : int
+ <static final> VIE_SERPENT : int
+ <static final> ATTAQUE_PERSO : int
+ <static final> ATTAQUE_MONSTRE : int

+ <static final> HAUT: String
+ <static final> BAS: String
+ <static final> GAUCHE: String
+ <static final> DROITE: String

+ murs : boolean[][]

+ getSuivant(int x, int y, String action) : int[]
+ Labyrinthe(String nom)
+ deplacerCombattant(Combattant c, String act) : void
+ etreCombattant(int x, int y) : boolean
+ deplacementValide(Combattant c, int[] suivante) : boolean
+ etreFini() : boolean
+ getLengthY(): int
+ getLength(): int
+ getMur(int x, int y): boolean
+ getCombattant(int x, int y) : Combattant
+ getPj() : Perso
+ getComb() : ArrayList<Combattant>
+ getEntiteInteractives() : ArrayList<EntiteInteractives>
+ combattantAutourPerso(Combattant c) : ArrayList<Combattant>
+ persoAutour(Combattant c) : boolean
+ chercherEntitéeInteractive(int x, int y) : Escalier
+ deplacementAleatoire() : String
+ comportementMonstre() : void
}

class LabyJeu{
- nbcourant : int
+ LabyJeu(String nomdossier)
+ update(double secondes, Clavier clavier) : void
+ init() : void
+ etreFini() : boolean
+ getLabyrinthe() : Labyrinthe
+ changerLabyCourant(boolean suivant) : void
}

class LabyDessin{
+ tailleCase : int
+ dessinerJeu(Jeu jeu, Canvas canvas) : void
- win(Canvas canvas,Labyrinthe labyrinthe) : void
- gameover( Canvas canvas,Labyrinthe labyrinthe) : void
- dessinSol(Labyrinthe labyrinthe, GraphicsContext gc) : void
- dessinEntiteInteractives(Labyrinthe labyrinthe, GraphicsContext gc) : void
- dessinPerso(Labyrinthe labyrinthe, Canvas canvas) : void
- dessinMurs(Labyrinthe labyrinthe,GraphicsContext gc) : void
- dessinCombatants(Labyrinthe labyrinthe, GraphicsContext gc) : void
}

}

package entites{

class Perso{
+ Perso(int dx, int dy, boolean col)
+ etrePresent(int dx, int dy) : boolean
+ deplacer(int[] suiv) : void
+ attaquer(Combattant c) : void
+ etreAttaque(int force) : void
+ getImage() : String
}

Abstract class Entité{
- x : int
- y : int
- collision : boolean
+ Entité(int x, int y, boolean col)
+ etrePresent(int dx, int dy) : boolean
+ setX(int x) : void
+ setY(int y) : void
+ setCollision(boolean col) : void
+ getX() : int
+ getY() : int
+ getPosition() : int[]
+ getCollision() : boolean
+ {abstract}getImage():String
}

Abstract class Combattant{
- pv : int
+ Combattant(int vie, int x, int y, boolean col)
+ getPv() : int
+ setPv()
+ etrePresent(int dx, int dy) : boolean
+ etreMort() : boolean
+ drawComb(GraphicsContext gc, Image imgCombatant) : void
+ {abstract}deplacer(int[] suiv) : void
+ {abstract}attaquer(Combattant c) : void
+ {abstract}etreAttaque(int force) : void
}

class EntiteInteractives{
+ EntiteInteractives(int x, int y, boolean col)
+ deplacer(int[] suiv) : void
+ getImage() : String
}

class Monstre{
+ Monstre(int vie, int x, int y, boolean col)
+ deplacer(int[] suiv) : void
+ attaquer(Combattant c) : void
+ etreAttaque(int force) : void
+ getImage() : String
}

class Fantome{
+ Fantome(int x, int y)
+ attaquer(Combattant c) : void
+ etreAttaque(int force) : void
+ deplacer(int[] suiv) : void
+ getImage() : String
}

class Serpent{
- taille : int
+ Serpent(int x, int y, int size)
+ attaquer(Combattant e) : void
+ etreAttaque(int force) : void
+ deplacer(int[] suiv) : void
+ etrePresent(int dx, int dy) : boolean
+ drawComb(GraphicsContext gc, Image imgCombatant) : void
+ getImage() : String
}

class SerPart{
+ SerPart(int xPos, int yPos)
+ etrePresent(int dx, int dy) : boolean
+ getImage() : String
}

class Troll{
+ Troll(int x, int y)
+ attaquer(Combattant c) : void
+ etreAttaque(int force) : void
+ deplacer(int[] suiv) : void
+ getImage() : String
}

class Escalier{
+ montant : boolean
+ changerEtage() : void
+ getImage() : String
}

}

package mains{

class Main{
}

class MainLaby{
}

}

}

package moteurJeu{

interface Jeu{
}

interface DessinJeu{
}

class Clavier{
}

class FrameStats{
}

class MoteurJeu{
}

}

Labyrinthe "1" --> "*" EntiteInteractives : + entiteInteractives
Labyrinthe "1" --> "*" Combattant : + comb
Labyrinthe "1" --> "1" Perso : + pj
LabyJeu "1" --> "1" Labyrinthe : + labyrinthe
LabyJeu "1" --> "*" Labyrinthe : + labyrinthes
Serpent "1" --> "*" SerPart : - snake

Main -right> Labyrinthe : use
MainLaby -> LabyJeu : use
MainLaby -> MoteurJeu : use
Entité <|-left- Combattant
Entité <|-- SerPart
Entité <|-- EntiteInteractives
Combattant <|-- Monstre
Combattant <|-up- Perso
Combattant <|-- Fantome
Combattant <|-- Serpent
Combattant <|-- Troll
EntiteInteractives <|-- Escalier
Jeu <|.. LabyJeu
DessinJeu <|.. LabyDessin
Application <|-- MoteurJeu

@enduml